# statsmodels-sgd

./: README.md  all.py  optimizers.py  pyproject.toml
.github/workflows/: ci-cd.yaml
statsmodels_sgd/: __init__.py  api.py  base_model.py  logit.py  ols.py  tools.py
statsmodels_sgd/docs/: _config.yml  _toc.yml  cps-asec-example.md  index.md  installation.md  logit-example.md  ols-example.md  ols_example.md  svrg_optimizer.md
statsmodels_sgd/regression/: __init__.py  discrete_model.py  linear_model.py
statsmodels_sgd/tests/: test_logit.py  test_ols.py  test_optimizers.py
